@@ -64,3 +64,4 @@ options:
   server_password:
   # every 10 NPBackup runs, we'll try an autoupgrade. Never set this lower than 2 since failed upgrades will prevent backups from succeeding
   interval: 10
+  backup_admin_password: NPBackup_00
