@@ -18,13 +18,13 @@ from npbackup.customization import ID_STRING
 
 # Try to import a private key, if not available, fallback to the default key
 try:
-    from npbackup._private_secret_keys import AES_KEY, ADMIN_PASSWORD
+    from npbackup._private_secret_keys import AES_KEY, DEFAULT_BACKUP_ADMIN_PASSWORD
     from npbackup._private_revac import revac
 
     AES_KEY = revac(AES_KEY)
 except ImportError:
     try:
-        from npbackup.secret_keys import AES_KEY, ADMIN_PASSWORD
+        from npbackup.secret_keys import AES_KEY, DEFAULT_BACKUP_ADMIN_PASSWORD
     except ImportError:
         print("No secret_keys file. Please read documentation.")
         sys.exit(1)
@@ -39,6 +39,7 @@ ENCRYPTED_OPTIONS = [
     {"section": "prometheus", "name": "http_password", "type": str},
     {"section": "options", "name": "server_username", "type": str},
     {"section": "options", "name": "server_password", "type": str},
+    {"section": "options", "name": "backup_admin_password", "type": str}
 ]
 
 empty_config_dict = {
@@ -52,7 +53,9 @@ empty_config_dict = {
     "repo": {"minimum_backup_age": 1440},
     "prometheus": {},
     "env": {},
-    "options": {},
+    "options": {
+        "backup_admin_password": DEFAULT_BACKUP_ADMIN_PASSWORD
+    },
 }
 
 
